--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-shadow-dom-retarget-events": "^1.1.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
